--- a/books-vue-demo/src/main/resources/templates/fragments/footer.html
+++ b/books-vue-demo/src/main/resources/templates/fragments/footer.html
@@ -10,5 +10,7 @@
 	<script src="https://cdn.polyfill.io/v2/polyfill.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<script src="https://unpkg.com/vue"></script>
+		<script src="/js/vuelidate.min.js"></script>
+	<script src="/js/validators.min.js"></script>
 	<script src="/js/script.js"></script>	
 </div>
